codegen/ui_tests/rhai_mod_non_clonable_return.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
    --> ui_tests/rhai_mod_non_clonable_return.rs:12:12
     |
12   |     pub fn test_fn(input: f32) -> NonClonable {
     |            ^^^^^^^^^^^^^^^^^^^^^^^-----------
     |            |                      |
     |            |                      required by a bound introduced by this call
     |            the trait `Clone` is not implemented for `NonClonable`
     |
note: required by a bound in `rhai::Dynamic::from`
    --> $WORKSPACE/src/dynamic.rs
     |
     |     pub fn from<T: Variant + Clone>(mut value: T) -> Self {
     |                              ^^^^^ required by this bound in `rhai::Dynamic::from`
